--- a/index.html
+++ b/index.html
@@ -1,15 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <link rel="stylesheet" href="./css/style.css">
-  <title>Color Snake</title>
-</head>
-<body>
-  <!-- don't forget the favicon -->
-  <canvas id="game"></canvas>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <link rel="stylesheet" href="./css/style.css" />
+    <title>Color Snake</title>
+  </head>
+  <body>
+    <!-- don't forget the favicon -->
+    
+    <br />
+
+    <canvas id="game"></canvas>
+ 
+  </body>
   <script src="./script/snake.js"></script>
-</body>
 </html>
