--- a/index.html
+++ b/index.html
@@ -9,11 +9,9 @@
   </head>
   <body>
     <!-- don't forget the favicon -->
-    
-    <br />
-
     <canvas id="game"></canvas>
  
   </body>
+  <script src="./script/objects.js"></script>
   <script src="./script/snake.js"></script>
 </html>
