--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <canvas id="game"></canvas>
  
   </body>
-  <script src="./script/objects.js"></script>
+  <script src="./script/global.js"></script>
   <script src="./script/snake.js"></script>
+  <script src="./script/game.js"></script>
 </html>
