commit in class

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
  
   </body>
   <script src="./script/global.js"></script>
+  <script src="./script/food.js"></script>
   <script src="./script/snake.js"></script>
   <script src="./script/game.js"></script>
 </html>
