--- a/index.html
+++ b/index.html
@@ -4,14 +4,38 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <link
+      rel="stylesheet"
+      href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+      integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T"
+      crossorigin="anonymous"
+    />
     <link rel="stylesheet" href="./css/style.css" />
     <title>Color Snake</title>
   </head>
   <body>
     <!-- don't forget the favicon -->
-    <canvas id="game"></canvas>
-    <br />
+    <div class="container">
+      <div class="row">
+        <h1>Color Snake</h1>
+      </div>
+      <div class="row">
+        <div class="col-1"></div>
+        <div class="col">
+          <div class="row">
+            <div class="col-8">
+              <canvas id="game"></canvas>
+            </div>
+            <div class="col-4">
+              <canvas id="color" width="60" height="90"></canvas>
+            </div>
+          </div>
+        </div>
+        <div class="col-1"></div>
+      </div>
+    </div>
   </body>
+  <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
   <script src="./script/global.js"></script>
   <script src="./script/food.js"></script>
   <script src="./script/snake.js"></script>
