--- a/index.html
+++ b/index.html
@@ -24,18 +24,12 @@
         <h1>Color Snake</h1>
       </div>
       <div class="row">
-        <div class="col-1"></div>
         <div class="col">
-          <div class="row">
-            <div class="col-8">
-              <canvas id="game"></canvas>
-            </div>
-            <div class="col-4">
-              <canvas id="color" width="60" height="90"></canvas>
-            </div>
-          </div>
+          <canvas id="game"></canvas>
         </div>
-        <div class="col-1"></div>
+        <div class="col-1">
+          <canvas id="color"></canvas>
+        </div>
       </div>
     </div>
   </body>
